--- a/client/src/components/Location/AddLocation.css
+++ b/client/src/components/Location/AddLocation.css
@@ -21,7 +21,7 @@
       height: 100%;
       padding-top: 125px;
       background-color: black;
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color:lavender;
       -webkit-transition: 0.5s;
       overflow: auto;
       transition: all 0.3s linear;
