--- a/client/src/containers/LocationContainer.css
+++ b/client/src/containers/LocationContainer.css
@@ -1,3 +1,15 @@
-.main{
-    width: 100%
+.app{
+    background-color: lavender;
+    background: lavender  no-repeat center;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+}
+
+
+.no-data{
+   
+
+
 }
